--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,12 +9,14 @@
 	          <% if signed_in? %>
 	            <li><%= link_to "Users", '#' %></li>
 	            <li id="fat-menu" class="dropdown">
-	            	<a href='#' class="dropdown-toggle" data-toggle="dropdown"> Account <b class= "caret"></b></a>
-	            	<ul class= "dropdown-menu">
-	            		<li><%= link_to "Profile", current_user %></li>
-	            		<li><%= link_to "Settings", '#' %></li>
-	            		<li class="divider"></li>
-	            		<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
+	            	<a href='#' class="dropdown-toggle" data-toggle="dropdown" role="button"> Account <b class= "caret"></b></a>
+	            	<ul class= "dropdown-menu" role="menu">
+	            		<li role="presentation">
+	            			<%= link_to "Profile", current_user, role: "menuitem" %>
+	            		</li>
+	            		<li role="presentation"><%= link_to "Settings", '#', role: "menuitem" %></li>
+	            		<li class="divider"  role="presentation"></li>
+	            		<li role="presentation"><%= link_to "Sign Out", signout_path, method: "delete", role: "menuitem" %></li>
 	            	</ul>
 	            </li>
 	          <% else %>
