--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -167,4 +167,22 @@ input, textarea, select, .uneditable-input {
 	@extend .error;
 }
 
+/*  USERS TABLE */
+
+.users {
+	list-style: none;
+	margin: 0;
+	li {
+		overflow: auto;
+		padding: 10px 0;
+		border-top: 1px solid #EAEAEA;
+		&:last-child {
+			border-bottom: 1px solid #EAEAEA;
+		}
+	}
+}
+
+.navbar-inner { 
+	background-color: #2c2c2c;
+	}
 
