--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,29 @@
 <header class= "navbar navbar-fixed-top">
-      <div class= "navbar-inner">
+    <div class= "navbar-inner">
 	    <div class= "container">
 	      <%= link_to "sample app", root_path, id: "logo" %>
-	      <nav>
-	        <ul class= "nav pull-right">
-	          <li><%= link_to "Home", root_path %></li>	
-	          <li><%= link_to "Help", help_path %></li>
-	          <% if signed_in? %>
-	            <li><%= link_to "Users", '#' %></li>
-	            <li id="fat-menu" class="dropdown">
-	            	<a href='#' class="dropdown-toggle" data-toggle="dropdown" role="button"> Account <b class= "caret"></b></a>
-	            	<ul class= "dropdown-menu" role="menu">
-	            		<li role="presentation">
-	            			<%= link_to "Profile", current_user, role: "menuitem" %>
-	            		</li>
-	            		<li role="presentation"><%= link_to "Settings", '#', role: "menuitem" %></li>
-	            		<li class="divider"  role="presentation"></li>
-	            		<li role="presentation"><%= link_to "Sign Out", signout_path, method: "delete", role: "menuitem" %></li>
-	            	</ul>
-	            </li>
-	          <% else %>
-	            <li><%= link_to "Sign In", signin_path %></li>
-	          <% end %>
-	        </ul>
-	      </nav>
-	    </div>
-  	  </div>      
-    </header>
+	        <nav>
+	        	<ul class= "nav pull-right">
+	          		<li><%= link_to "Home", root_path %></li>	
+	          		<li><%= link_to "Help", help_path %></li>
+	          		<% if signed_in? %>
+	            	<li><%= link_to "Users", users_path %></li>
+	            	<li id="fat-menu" class="dropdown">
+	            		<a href='#' class="dropdown-toggle" data-toggle="dropdown" role="button"> Account <b class= "caret"></b></a>
+	            		<ul class= "dropdown-menu" role="menu">
+	            			<li role="presentation">
+	            				<%= link_to "Profile", current_user, role: "menuitem" %>
+	            			</li>
+	            			<li role="presentation"><%= link_to "Settings", edit_user_path(current_user), role: "menuitem" %></li>
+	            			<li class="divider"  role="presentation"></li>
+	            			<li role="presentation"><%= link_to "Sign Out", signout_path, method: "delete", role: "menuitem" %></li>
+	            		</ul>
+	            	</li>
+	          		<% else %>
+	            	<li><%= link_to "Sign In", signin_path %></li>
+	          		<% end %>
+	        	</ul>
+	    	</nav>
+		</div>
+  	</div>      
+</header>
