--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,13 @@
 			</h1>
 		</section>
 	</aside>
+	<div class="span8">
+		<% if @user.microposts.any? %>
+		<h3>MICROPOSTS (<%= @user.microposts.count %>)</h3>
+		<ol class="microposts">
+			<%= render @microposts %>
+		</ol>
+		<%= will_paginate @microposts %>
+		<% end %>
+	</div>
 </div>
