Add user following.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -137,10 +137,33 @@ aside {
 		}
 	}
 }
+.user_avatars {
+	overflow: auto;
+	margin-top: 10px;
+	.gravatar {
+		margin: 1px 1px;
+	}
+}
 
-.gravatar {
-	float: left;
-	margin-right: 10px;
+.stats {
+	overflow: auto;
+	a {
+		float: left;
+		padding: 0 10px;
+		border-left: 1px solid $grayLighter;
+		color: gray;
+		&:first-child {
+			padding-left: 0;
+			border: 0;
+		}
+		&:hover {
+			text-decoration: none;
+			color: $blue;
+		}
+	}
+	strong {
+		display: block;
+	}
 }
 
 /* FORMS */
@@ -212,3 +235,4 @@ aside {
 		margin-bottom: 2px;
 	}
 }
+
